flowc/tests/fixtures/check_e146_equality_nonprimitive.expected.err
tests/fixtures/check_e146_equality_nonprimitive.flow:7:5: error[E146]: equality '==' not admitted for Hypothesis; only primitives compare
