flowc/tests/fixtures/check_e146_equality_nonprimitive.flow
type Hypothesis =
  | DeployCaused { suspect_deploy_id: string }
  | CapacityIssue { resource: string }

flow f(string) -> bool {
  h = DeployCaused { suspect_deploy_id: it }
  h == h
}
